update logistic regression slides

--- a/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
+++ b/23-Regression Graphs and Tables/23-Regression Graphs and Tables.Rmd
@@ -157,7 +157,7 @@ Sweave Document
 
 
 ```{r, eval=FALSE}
-#install.package("stargazer")
+#install.packages("stargazer")
 library(stargazer)
 library(dplyr)
 library(broom)
