--- a/32-lab-hurricanes/32-lab-hurricanes.Rmd
+++ b/32-lab-hurricanes/32-lab-hurricanes.Rmd
@@ -231,7 +231,8 @@ library(MASS) ## use this package to run your regression (see http://www.ats.ucl
 
 http://bit.do/soc504_lab
 
-
+## To see html version
+http://htmlpreview.github.io/?https://raw.githubusercontent.com/soc504-s2015-princeton/slides/master/32-lab-hurricanes/32-lab-hurricanes-solutions.html
 
 #### Please don't delete this; it is helpful for debugging
 
